move to settings project